give header links more horizontal space to avoid very early wrapping of the links

--- a/trunk/war/custom.css
+++ b/trunk/war/custom.css
@@ -7,9 +7,8 @@ body {
 .loading_panel {
 	color: white;
 	font-weight: bold;
-	margin-left: auto;
-	margin-right: auto;
-	top: 50px ! important;	
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 .body {
@@ -38,19 +37,19 @@ body {
 
 .header_logo {
 	float: left;
-	width: 40%;
+	width: 20%;
 }
 
 .loadIndicator {
 	float: left;
-	width: 20%; 
+	width: 10%; 
 	font-weight: bold; 
 	text-align: center;
 }
 
 .header_links {
 	float: right;
-	width: 40%;	
+	width: 70%;	
 }
 
 .header_link {
@@ -70,7 +69,7 @@ body {
 
 .header_search_field {
 	float: left;
-	width: 300px;
+	width: 400px; /* make this very big to assure it dominates the ui: users should encouraged to use this a lot */
 }
 
 /* VIEWS */
